Nav items centered.

--- a/BlogDeneme/Views/Shared/_Layout.cshtml
+++ b/BlogDeneme/Views/Shared/_Layout.cshtml
@@ -76,12 +76,7 @@
             <div class="classy-nav-container breakpoint-off">
                 <div class="container">
                     <!-- Classy Menu -->
-                    <nav class="classy-navbar justify-content-between">
-
-                        <!-- Subscribe btn -->
-                        <div class="subscribe-btn">
-                            <a href="#" class="btn subscribe-btn" style="visibility:hidden;" data-toggle="modal" data-target="#subsModal">Subscribe</a>
-                        </div>
+                    <nav class="classy-navbar justify-content-lg-center">
 
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
