--- a/BlogDeneme/Views/Shared/_Layout.cshtml
+++ b/BlogDeneme/Views/Shared/_Layout.cshtml
@@ -43,11 +43,9 @@
                         <div class="breaking-news-area">
                             <div id="breakingNewsTicker" class="ticker">
                                 <ul>
-                                    <li><a>C#</a></li>
-                                    <li><a>ASP.NET</a></li>
-                                    <li><a>MVC</a></li>
-                                    <li><a>ARDUINO</a></li>
-                                    <li><a>XAMARIN</a></li>
+                                    <li><a>YAZILIM</a></li>
+                                    <li><a>TEKNOLOJİ</a></li>
+                                    <li><a>WEB TASARIM</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -74,7 +72,7 @@
         <!-- Nav Area -->
         <div class="original-nav-area" id="stickyNav">
             <div class="classy-nav-container breakpoint-off">
-                <div class="container">
+                <div class="container-fluid">
                     <!-- Classy Menu -->
                     <nav class="classy-navbar justify-content-lg-center">
 
