--- a/BlogDeneme/Views/AnaSayfa/Kategori.cshtml
+++ b/BlogDeneme/Views/AnaSayfa/Kategori.cshtml
@@ -51,7 +51,7 @@
                 }
 
                 <div>
-                    @Html.PagedListPager((IPagedList)Model, sayfa => Url.Action("Index", new { sayfa }), new PagedListRenderOptions
+                    @Html.PagedListPager((IPagedList)Model, sayfa => Url.Action("Kategori", new { sayfa }), new PagedListRenderOptions
                     {
                         LiElementClasses = new List<string>
                         { "page-link"}
