--- a/BlogDeneme/Views/Vitrin/BlogEkle.cshtml
+++ b/BlogDeneme/Views/Vitrin/BlogEkle.cshtml
@@ -41,7 +41,7 @@
     </div>
 
     <div class="form-group">
-        @Html.TextAreaFor(x => x.ICERIK, new { @class = "form-control", id = "summernote" })
+        @Html.TextAreaFor(x => x.ICERIK, new { @class = "form-control", id = "content" })
     </div>
 
     <div class="clearfix">
@@ -51,26 +51,29 @@
     </div>
 </form>
 
-
-
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js"></script>
-
+<script src="//cdn.ckeditor.com/4.19.0/full/ckeditor.js"></script>
 <script>
-    $('#summernote').summernote({
-        placeholder: 'İçerik...',
-        tabsize: 2,
-        height: 300,
-        width: 1050,
-        toolbar: [
-            ['style', ['style']],
-            ['font', ['bold', 'underline', 'clear']],
-            ['color', ['color']],
-            ['para', ['ul', 'ol', 'paragraph']],
-            ['table', ['table']],
-            ['insert', ['link', 'picture', 'video']],
-            ['view', ['fullscreen', 'codeview', 'help']]
-        ]
-    });
+    CKEDITOR.replace('content');
 </script>
+
+@*<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js"></script>
+
+    <script>
+        $('#summernote').summernote({
+            placeholder: 'İçerik...',
+            tabsize: 2,
+            height: 300,
+            width: 1050,
+            toolbar: [
+                ['style', ['style']],
+                ['font', ['bold', 'underline', 'clear']],
+                ['color', ['color']],
+                ['para', ['ul', 'ol', 'paragraph']],
+                ['table', ['table']],
+                ['insert', ['link', 'picture', 'video']],
+                ['view', ['fullscreen', 'codeview', 'help']]
+            ]
+        });
+    </script>*@
